fix (text): vertical align of sup elements

--- a/src/scss/03-base/_text.scss
+++ b/src/scss/03-base/_text.scss
@@ -14,3 +14,7 @@ pre {
     overflow-x: auto;
     white-space: pre;
 }
+
+sup {
+    vertical-align: super;
+}
